Bug 1726064 - part 3: Make `HTMLEditor::MaybeCollapseSelectionAtFirstEditableNode()` use `HTMLEditUtils::GetAncestorElement()` r=m_kato
Differential Revision: https://phabricator.services.mozilla.com/D122941

UltraBlame original commit: 117469e0f09715170ad31685fdadbb6998048544

--- a/testing/web-platform/tests/selection/contenteditable/initial-selection-on-focus.tentative.html
+++ b/testing/web-platform/tests/selection/contenteditable/initial-selection-on-focus.tentative.html
@@ -12,6 +12,34 @@ utf
 8
 >
 <
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+div
+"
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+span
+"
+>
+<
 title
 >
 initial
@@ -97,29 +125,6 @@ script
 body
 >
 <
-div
-id
-=
-"
-editor
-"
-contenteditable
-style
-=
-"
-min
--
-height
-:
-1em
-;
-"
->
-<
-/
-div
->
-<
 script
 >
 "
@@ -132,6 +137,77 @@ function
 (
 )
 {
+const
+editingHostTagName
+=
+document
+.
+location
+.
+search
+.
+substr
+(
+1
+)
+;
+const
+editor
+=
+document
+.
+createElement
+(
+editingHostTagName
+)
+;
+editor
+.
+style
+.
+minHeight
+=
+"
+1em
+"
+;
+editor
+.
+setAttribute
+(
+"
+contenteditable
+"
+"
+"
+)
+;
+document
+.
+body
+.
+insertBefore
+(
+editor
+document
+.
+body
+.
+firstChild
+)
+;
+editor
+.
+focus
+(
+)
+;
+editor
+.
+getBoundingClientRect
+(
+)
+;
 const
 tests
 =
@@ -156,6 +232,9 @@ content
 {
 }
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -179,6 +258,9 @@ content
 ]
 abc
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -205,6 +287,9 @@ content
 br
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -235,6 +320,9 @@ br
 br
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -271,6 +359,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -312,6 +403,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -365,6 +459,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -418,6 +515,9 @@ nabc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -457,6 +557,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -500,6 +603,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -536,6 +642,9 @@ abc
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -575,6 +684,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -618,6 +730,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -649,6 +764,9 @@ span
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -680,6 +798,9 @@ b
 b
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -711,6 +832,9 @@ i
 i
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -742,6 +866,9 @@ u
 u
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -773,6 +900,9 @@ s
 s
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -804,6 +934,9 @@ code
 code
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -844,6 +977,9 @@ html
 a
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -875,6 +1011,9 @@ foobar
 foobar
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -901,6 +1040,9 @@ content
 input
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -934,6 +1076,9 @@ foo
 "
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -978,6 +1123,9 @@ abc
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -1025,6 +1173,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -1072,6 +1223,9 @@ abc
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -1121,6 +1275,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -1173,6 +1330,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -1223,6 +1383,9 @@ abc
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -1281,6 +1444,9 @@ abc
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -1342,6 +1508,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -1402,6 +1571,9 @@ abc
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -1465,6 +1637,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -1516,6 +1691,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -1579,6 +1757,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -1626,6 +1807,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -1673,6 +1857,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -1722,6 +1909,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -1774,6 +1964,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -1824,6 +2017,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -1882,6 +2078,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -1943,6 +2142,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -2005,6 +2207,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -2066,6 +2271,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -2126,6 +2334,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -2189,6 +2400,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -2253,6 +2467,9 @@ span
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -2320,6 +2537,9 @@ span
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -2387,6 +2607,9 @@ span
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -2456,6 +2679,9 @@ span
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -2528,6 +2754,9 @@ span
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -2598,6 +2827,9 @@ span
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -2637,53 +2869,9 @@ false
 span
 >
 "
-}
-{
-description
+canTestInInlineEditingHost
 :
-"
-editor
-should
-collapse
-selection
-before
-the
-non
--
-editable
-<
-span
->
-node
-even
-if
-it
-has
-a
-text
-node
-"
-content
-:
-"
-{
-}
-<
-span
-contenteditable
-=
-\
-"
-false
-\
-"
->
-abc
-<
-/
-span
->
-"
+true
 }
 {
 description
@@ -2707,6 +2895,56 @@ if
 it
 has
 a
+text
+node
+"
+content
+:
+"
+{
+}
+<
+span
+contenteditable
+=
+\
+"
+false
+\
+"
+>
+abc
+<
+/
+span
+>
+"
+canTestInInlineEditingHost
+:
+true
+}
+{
+description
+:
+"
+editor
+should
+collapse
+selection
+before
+the
+non
+-
+editable
+<
+span
+>
+node
+even
+if
+it
+has
+a
 <
 br
 >
@@ -2735,6 +2973,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -2788,6 +3029,9 @@ abc
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -2846,6 +3090,9 @@ def
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -2908,6 +3155,9 @@ abc
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -2965,6 +3215,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -3026,6 +3279,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -3092,6 +3348,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -3145,6 +3404,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -3203,6 +3465,9 @@ def
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -3265,6 +3530,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -3322,6 +3590,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -3383,6 +3654,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -3449,6 +3723,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -3516,6 +3793,9 @@ abc
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -3588,6 +3868,9 @@ def
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -3664,6 +3947,9 @@ abc
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -3735,6 +4021,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -3811,6 +4100,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -3891,6 +4183,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -3968,6 +4263,9 @@ span
 div
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -4050,6 +4348,9 @@ span
 div
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -4136,6 +4437,9 @@ span
 div
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -4217,6 +4521,9 @@ span
 div
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -4303,6 +4610,9 @@ span
 div
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -4393,6 +4703,9 @@ span
 div
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -4453,6 +4766,9 @@ false
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -4518,6 +4834,9 @@ def
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -4587,6 +4906,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -4651,6 +4973,9 @@ false
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -4720,6 +5045,9 @@ abc
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -4793,6 +5121,9 @@ br
 span
 >
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -4853,6 +5184,9 @@ false
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -4918,6 +5252,9 @@ def
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -4987,6 +5324,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -5051,6 +5391,9 @@ false
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -5120,6 +5463,9 @@ abc
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -5193,6 +5539,9 @@ br
 p
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -5224,6 +5573,9 @@ input
 >
 abc
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -5255,6 +5607,9 @@ hr
 >
 abc
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -5291,6 +5646,9 @@ textarea
 >
 def
 "
+canTestInInlineEditingHost
+:
+true
 }
 {
 description
@@ -5322,6 +5680,9 @@ abc
 div
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -5353,6 +5714,9 @@ abc
 div
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 {
 description
@@ -5389,20 +5753,21 @@ def
 div
 >
 "
+canTestInInlineEditingHost
+:
+false
 }
 ]
 ;
 const
-editor
+isInlineEditingHost
 =
-document
-.
-getElementById
-(
+editingHostTagName
+=
+=
 "
-editor
+span
 "
-)
 ;
 const
 selection
@@ -5421,6 +5786,20 @@ of
 tests
 )
 {
+if
+(
+isInlineEditingHost
+&
+&
+!
+testData
+.
+canTestInInlineEditingHost
+)
+{
+continue
+;
+}
 test
 (
 function
@@ -5550,24 +5929,30 @@ editor
 .
 innerHTML
 =
-"
 <
-p
+{
+editingHostTagName
+}
 >
 abc
 <
 /
-p
+{
+editingHostTagName
+}
 >
 <
-p
+{
+editingHostTagName
+}
 >
 def
 <
 /
-p
+{
+editingHostTagName
+}
 >
-"
 ;
 editor
 .
@@ -5666,26 +6051,32 @@ assert_equals
 editor
 .
 innerHTML
-"
 <
-p
+{
+editingHostTagName
+}
 >
 abc
 <
 /
-p
+{
+editingHostTagName
+}
 >
 <
-p
+{
+editingHostTagName
+}
 >
 [
 ]
 def
 <
 /
-p
+{
+editingHostTagName
+}
 >
-"
 )
 ;
 }
