Backed out changeset 8370f995a458 (bug 1726374) for causing reftest failures in view-source:bug1319410-1.html CLOSED TREE
UltraBlame original commit: cd44c6ac22eed9a005586a55d006764a72034aaa

--- a/parser/htmlparser/tests/reftest/bug1319410-1-ref.html
+++ b/parser/htmlparser/tests/reftest/bug1319410-1-ref.html
@@ -24,6 +24,30 @@ width
 <
 title
 >
+file
+:
+/
+/
+/
+opt
+/
+Projects
+/
+gecko
+/
+parser
+/
+htmlparser
+/
+tests
+/
+reftest
+/
+bug1319410
+-
+1
+.
+html
 <
 /
 title
