--- a/parser/htmlparser/tests/reftest/bug1650087-1-ref.html
+++ b/parser/htmlparser/tests/reftest/bug1650087-1-ref.html
@@ -24,6 +24,30 @@ width
 <
 title
 >
+file
+:
+/
+/
+/
+opt
+/
+Projects
+/
+gecko
+/
+parser
+/
+htmlparser
+/
+tests
+/
+reftest
+/
+bug1650087
+-
+1
+.
+html
 <
 /
 title
