Bug 1725502 - Create DTD migration for strings in main-popupset.inc.xhtml r=flod,fluent-reviewers
Creates a migration for browser.tfl to unify strings in browser.dtd and broser.properties
that are used in main-popupset.inc.xhtml

Differential Revision: https://phabricator.services.mozilla.com/D122538

UltraBlame original commit: 0929368f2f8956ffc7287eef071323e36d1f0e71

--- a/browser/base/content/main-popupset.inc.xhtml
+++ b/browser/base/content/main-popupset.inc.xhtml
@@ -2402,16 +2402,22 @@ close
 -
 icon
 "
-tooltiptext
+data
+-
+l10n
+-
+id
 =
 "
-&
-uiTour
-.
-infoPanel
-.
+ui
+-
+tour
+-
+info
+-
+panel
+-
 close
-;
 "
 /
 >
@@ -3854,15 +3860,6 @@ id
 "
 blockedPopupAllowSite
 "
-accesskey
-=
-"
-&
-allowPopups
-.
-accesskey
-;
-"
 oncommand
 =
 "
@@ -3931,14 +3928,22 @@ id
 "
 blockedPopupDontShowMessage
 "
-accesskey
+data
+-
+l10n
+-
+id
 =
 "
-&
-dontShowMessage
-.
-accesskey
-;
+popups
+-
+infobar
+-
+dont
+-
+show
+-
+message
 "
 type
 =
@@ -4169,23 +4174,22 @@ pictureInPictureToggleContextMenu
 >
 <
 menuitem
-label
+data
+-
+l10n
+-
+id
 =
 "
-&
-pictureInPictureHideToggle
-.
-label
-;
-"
-accesskey
-=
-"
-&
-pictureInPictureHideToggle
-.
-accesskey
-;
+picture
+-
+in
+-
+picture
+-
+hide
+-
+toggle
 "
 oncommand
 =
