Bug 1723266 - Return an infinite perspective in TransformOperation::Perspective::to_animated_zero. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D122919

UltraBlame original commit: 21e4ad4c85992394619ce34a7a83332ca7d0c43e

--- a/testing/web-platform/tests/css/css-transforms/animation/transform-perspective-composition.html
+++ b/testing/web-platform/tests/css/css-transforms/animation/transform-perspective-composition.html
@@ -188,7 +188,7 @@ clamped
 /
 /
 to
-1
+0
 )
 and
 would
@@ -280,7 +280,7 @@ perspective
 )
 perspective
 (
-1px
+none
 )
 /
 /
@@ -524,27 +524,9 @@ at
 expect
 :
 '
-matrix3d
+perspective
 (
-1
-0
-0
-0
-0
-1
-0
-0
-0
-0
-1
--
-1
-.
-1
-0
-0
-0
-1
+10px
 )
 '
 }
