Backed out changeset 21e4ad4c8599 (bug 1723266) for causing mochitest plain failures on test_distance_of_transform.html. CLOSED TREE
UltraBlame original commit: 4b2e2bbb8a39b8e03311b22972f2121f05e28eab

--- a/testing/web-platform/tests/css/css-transforms/animation/transform-perspective-composition.html
+++ b/testing/web-platform/tests/css/css-transforms/animation/transform-perspective-composition.html
@@ -188,7 +188,7 @@ clamped
 /
 /
 to
-0
+1
 )
 and
 would
@@ -280,7 +280,7 @@ perspective
 )
 perspective
 (
-none
+1px
 )
 /
 /
@@ -524,9 +524,27 @@ at
 expect
 :
 '
-perspective
+matrix3d
 (
-10px
+1
+0
+0
+0
+0
+1
+0
+0
+0
+0
+1
+-
+1
+.
+1
+0
+0
+0
+1
 )
 '
 }
