--- a/devtools/server/tests/chrome/test_inspector-dead-nodes.html
+++ b/devtools/server/tests/chrome/test_inspector-dead-nodes.html
@@ -197,6 +197,83 @@ gCommands
 =
 null
 ;
+/
+/
+TODO
+:
+With
+server
+side
+target
+switching
+(
+devtools
+.
+target
+-
+switching
+.
+server
+.
+enabled
+)
+/
+/
+this
+test
+is
+most
+likely
+irrelevant
+.
+/
+/
+APIs
+that
+might
+survive
+a
+reload
+should
+be
+moved
+to
+commands
+instead
+of
+/
+/
+target
+scoped
+fronts
+because
+targets
+no
+longer
+survive
+a
+reload
+.
+/
+/
+See
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1726597
 async
 function
 reloadTarget
