Bug 1725800 - Also check if the uri path is the same when doing upgrade and downgrade loop check, r=ckerschb
Differential Revision: https://phabricator.services.mozilla.com/D122847

UltraBlame original commit: 033420d6bd5631f1c8807e5e7bb410c11da22e03

--- a/dom/security/test/https-first/test_break_endless_upgrade_downgrade_loop.html
+++ b/dom/security/test/https-first/test_break_endless_upgrade_downgrade_loop.html
@@ -301,6 +301,69 @@ message
 receiveMessage
 )
 ;
+window
+.
+addEventListener
+(
+"
+message
+"
+receiveMessageForDifferentPathTest
+)
+;
+testDifferentPath
+(
+)
+;
+}
+async
+function
+receiveMessageForDifferentPathTest
+(
+event
+)
+{
+is
+(
+event
+.
+data
+.
+result
+"
+scheme
+-
+https
+"
+"
+scheme
+should
+be
+https
+when
+the
+path
+is
+different
+"
+)
+;
+testWin
+.
+close
+(
+)
+;
+window
+.
+removeEventListener
+(
+"
+message
+"
+receiveMessageForDifferentPathTest
+)
+;
 SimpleTest
 .
 finish
@@ -380,6 +443,68 @@ uri
 )
 ;
 }
+async
+function
+testDifferentPath
+(
+)
+{
+/
+/
+Load
+an
+https
+:
+/
+/
+window
+which
+gets
+downgraded
+to
+http
+:
+/
+/
+let
+uri
+=
+https
+:
+/
+/
+example
+.
+com
+/
+tests
+/
+dom
+/
+security
+/
+test
+/
+https
+-
+first
+/
+file_break_endless_upgrade_downgrade_loop
+.
+sjs
+?
+downgrade
+;
+testWin
+=
+window
+.
+open
+(
+uri
+)
+;
+}
 /
 /
 Set
@@ -424,6 +549,16 @@ mixed_content
 block_display_content
 "
 false
+]
+[
+"
+dom
+.
+security
+.
+https_only_check_path_upgrade_downgrade_endless_loop
+"
+true
 ]
 ]
 }
