--- a/dom/security/test/https-only/test_break_endless_upgrade_downgrade_loop.html
+++ b/dom/security/test/https-only/test_break_endless_upgrade_downgrade_loop.html
@@ -301,6 +301,61 @@ aTestName
 }
 async
 function
+verifyTest4Result
+(
+)
+{
+let
+pathname
+=
+content
+.
+document
+.
+location
+.
+pathname
+;
+ok
+(
+pathname
+=
+=
+=
+"
+/
+tests
+/
+dom
+/
+security
+/
+test
+/
+https
+-
+only
+/
+file_user_gesture
+.
+html
+"
+"
+the
+http
+:
+/
+/
+page
+should
+be
+loaded
+"
+)
+;
+}
+async
+function
 runTests
 (
 )
@@ -331,6 +386,16 @@ dom
 security
 .
 https_only_mode_break_upgrade_downgrade_endless_loop
+"
+true
+]
+[
+"
+dom
+.
+security
+.
+https_only_check_path_upgrade_downgrade_endless_loop
 "
 true
 ]
@@ -419,6 +484,35 @@ _blank
 ;
 /
 /
+Test
+4
+:
+302
+Redirect
+with
+a
+different
+path
+let
+winTest4
+=
+window
+.
+open
+(
+REQUEST_URL
++
+"
+?
+test4a
+"
+"
+_blank
+"
+)
+;
+/
+/
 provide
 enough
 time
@@ -497,6 +591,26 @@ verifyResult
 )
 ;
 winTest3
+.
+close
+(
+)
+;
+await
+SpecialPowers
+.
+spawn
+(
+winTest4
+[
+"
+test4
+"
+]
+verifyTest4Result
+)
+;
+winTest4
 .
 close
 (
