Bug 1723951 - put icons back for bookmarks toolbar and other bookmarks folders in the bookmarks menu button, r=mconley
Differential Revision: https://phabricator.services.mozilla.com/D123154

UltraBlame original commit: 56280f0a9681e45e2cf05a8ca31c85a921d6981c

--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -6764,6 +6764,9 @@ bookmark
 -
 item
 subviewbutton
+menu
+-
+iconic
 "
 data
 -
@@ -6953,6 +6956,9 @@ bookmark
 -
 item
 subviewbutton
+menu
+-
+iconic
 "
 data
 -
