Bug 1724358 - Don't apply overscroll-behavior properties on non scrollable APZCs for scrolling handoff. r=botond
This behavior is not compliant with the CSS overscroll behavior spec.

The spec clearly explains that overscroll-behavior applies to scroll
container elements. But overflow: hidden elements can be scroll container
elements, thus the property should be respected in terms of the spec
definitions. That said, Chrome has been doing this behavior since 2017 [1],


[1] https://bugs.chromium.org/p/chromium/issues/detail?id=759209
[2] https://github.com/w3c/csswg-drafts/issues/6523

Differential Revision: https://phabricator.services.mozilla.com/D122199

UltraBlame original commit: 6df43bd2a7bcd482132acb79a55ed9b0c8565fd9

--- a/gfx/layers/apz/test/mochitest/test_group_wheelevents.html
+++ b/gfx/layers/apz/test/mochitest/test_group_wheelevents.html
@@ -541,6 +541,22 @@ prefs
 :
 prefs
 }
+{
+"
+file
+"
+:
+"
+helper_wheelevents_handoff_on_non_scrollable_iframe
+.
+html
+"
+"
+prefs
+"
+:
+prefs
+}
 ]
 ;
 /
