Bug 1726396 - Update getComputedStyle pseudo-element behavior. r=dholbert
Differential Revision: https://phabricator.services.mozilla.com/D122978

UltraBlame original commit: a030e70b6c062dabffaafab83beb85dc7fd33601

--- a/testing/web-platform/tests/css/cssom/getComputedStyle-pseudo.html
+++ b/testing/web-platform/tests/css/cssom/getComputedStyle-pseudo.html
@@ -1363,13 +1363,8 @@ test
 '
 )
 ;
-assert_throws_js
+assert_not_equals
 (
-TypeError
-(
-)
-=
->
 getComputedStyle
 (
 div
@@ -1377,15 +1372,93 @@ div
 totallynotapseudo
 "
 )
+.
+length
+0
 "
-getComputedStyle
-with
-an
+Should
+return
+the
+element
+'
+s
+style
+for
 unknown
 pseudo
 -
-element
-throws
+elements
+that
+don
+'
+t
+start
+with
+a
+colon
+"
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+div
+"
+:
+:
+totallynotapseudo
+"
+)
+.
+length
+0
+"
+Should
+return
+an
+empty
+style
+for
+unknown
+pseudo
+-
+elements
+starting
+with
+double
+-
+colon
+"
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+div
+"
+:
+totallynotapseudo
+"
+)
+.
+length
+0
+"
+Should
+return
+an
+empty
+style
+for
+unknown
+pseudo
+-
+elements
+starting
+with
+colon
 "
 )
 ;
@@ -1395,7 +1468,6 @@ Unknown
 pseudo
 -
 elements
-throw
 "
 )
 ;
