Bug 1725207 - Implement transform: perspective(none). r=mattwoodrow
Differential Revision: https://phabricator.services.mozilla.com/D123350

UltraBlame original commit: 72c1e5d56d39df618c22aaeb8ff3f83794010469

--- a/testing/web-platform/tests/css/css-transforms/parsing/transform-valid.html
+++ b/testing/web-platform/tests/css/css-transforms/parsing/transform-valid.html
@@ -905,6 +905,32 @@ test_valid_value
 transform
 "
 "
+perspective
+(
+10px
+)
+"
+)
+;
+test_valid_value
+(
+"
+transform
+"
+"
+perspective
+(
+none
+)
+"
+)
+;
+test_valid_value
+(
+"
+transform
+"
+"
 translate
 (
 1px
