--- a/testing/web-platform/tests/css/css-transforms/animation/transform-interpolation-001.html
+++ b/testing/web-platform/tests/css/css-transforms/animation/transform-interpolation-001.html
@@ -1317,6 +1317,93 @@ perspective
 ]
 )
 ;
+test_interpolation
+(
+{
+property
+:
+'
+transform
+'
+from
+:
+'
+perspective
+(
+none
+)
+'
+to
+:
+'
+perspective
+(
+500px
+)
+'
+}
+[
+{
+at
+:
+-
+1
+expect
+:
+perspective
+(
+none
+)
+}
+{
+at
+:
+0
+expect
+:
+perspective
+(
+none
+)
+}
+{
+at
+:
+0
+.
+5
+expect
+:
+perspective
+(
+1000px
+)
+}
+{
+at
+:
+1
+expect
+:
+perspective
+(
+500px
+)
+}
+{
+at
+:
+2
+expect
+:
+perspective
+(
+250px
+)
+}
+]
+)
+;
 /
 /
 Rotate
