--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/select-validity.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/select-validity.html
@@ -1300,6 +1300,185 @@ option
 "
 )
 ;
+test
+(
+function
+(
+)
+{
+var
+select
+=
+document
+.
+createElement
+(
+'
+select
+'
+)
+;
+select
+.
+required
+=
+true
+;
+var
+placeholder
+=
+document
+.
+createElement
+(
+'
+option
+'
+)
+;
+select
+.
+appendChild
+(
+placeholder
+)
+;
+var
+nonPlaceholder
+=
+document
+.
+createElement
+(
+'
+option
+'
+)
+;
+nonPlaceholder
+.
+textContent
+=
+"
+non
+-
+placeholder
+-
+option
+"
+;
+select
+.
+appendChild
+(
+nonPlaceholder
+)
+;
+assert_false
+(
+select
+.
+checkValidity
+(
+)
+"
+If
+the
+placeholder
+label
+option
+is
+selected
+required
+select
+element
+shouldn
+'
+t
+be
+valid
+.
+"
+)
+;
+placeholder
+.
+remove
+(
+)
+;
+assert_true
+(
+select
+.
+checkValidity
+(
+)
+"
+If
+the
+placeholder
+label
+option
+is
+removed
+required
+select
+element
+should
+become
+valid
+.
+"
+)
+;
+select
+.
+prepend
+(
+placeholder
+)
+;
+assert_false
+(
+select
+.
+checkValidity
+(
+)
+"
+If
+the
+placeholder
+label
+option
+is
+selected
+required
+select
+element
+shouldn
+'
+t
+be
+valid
+.
+"
+)
+;
+}
+"
+Remove
+and
+add
+back
+the
+placeholder
+label
+option
+"
+)
+;
 <
 /
 script
