Bug 1723727 - Specify a meta viewport tag to each files in /css/css-shapes/shape-outside/values/ to avoid auto-scaling on mobile. r=TYLin
Differential Revision: https://phabricator.services.mozilla.com/D123402

UltraBlame original commit: 3e81e2a213107f44ef9aec06e8838a2f6effff3c

--- a/testing/web-platform/tests/css/css-shapes/shape-outside/values/shape-outside-shape-box-pair-000.html
+++ b/testing/web-platform/tests/css/css-shapes/shape-outside/values/shape-outside-shape-box-pair-000.html
@@ -222,6 +222,33 @@ dom
 "
 >
 <
+meta
+name
+=
+"
+viewport
+"
+content
+=
+"
+width
+=
+device
+-
+width
+initial
+-
+scale
+=
+1
+minimum
+-
+scale
+=
+1
+"
+>
+<
 script
 src
 =
@@ -467,9 +494,6 @@ polygon
 1px
 1px
 )
-margin
--
-box
 "
 "
 expected_computed
@@ -481,9 +505,6 @@ polygon
 1px
 1px
 )
-margin
--
-box
 "
 }
 {
@@ -647,9 +668,6 @@ polygon
 1px
 1px
 )
-margin
--
-box
 "
 "
 expected_computed
@@ -661,9 +679,6 @@ polygon
 1px
 1px
 )
-margin
--
-box
 "
 }
 ]
