--- a/testing/web-platform/tests/css/css-shapes/shape-outside/values/shape-outside-shape-initial-000.html
+++ b/testing/web-platform/tests/css/css-shapes/shape-outside/values/shape-outside-shape-initial-000.html
@@ -187,6 +187,33 @@ dom
 "
 >
 <
+meta
+name
+=
+"
+viewport
+"
+content
+=
+"
+width
+=
+device
+-
+width
+initial
+-
+scale
+=
+1
+minimum
+-
+scale
+=
+1
+"
+>
+<
 script
 src
 =
