--- a/testing/web-platform/tests/css/css-shapes/shape-outside/values/shape-outside-shape-notation-000.html
+++ b/testing/web-platform/tests/css/css-shapes/shape-outside/values/shape-outside-shape-notation-000.html
@@ -220,6 +220,33 @@ dom
 "
 >
 <
+meta
+name
+=
+"
+viewport
+"
+content
+=
+"
+width
+=
+device
+-
+width
+initial
+-
+scale
+=
+1
+minimum
+-
+scale
+=
+1
+"
+>
+<
 script
 src
 =
