Bug 1705289 require user gesture for screen capture through non-standard mediaSource in getUserMedia() r=jib
for consistency with getDisplayMedia().

System callers are trusted to be excluded from the requirement.
The exclusion may not be strictly necessary for capture previews, but removes
any doubt and simplifies testing.

Differential Revision: https://phabricator.services.mozilla.com/D122193

UltraBlame original commit: 3d86317782d298b98be58646114bebba21611014

--- a/dom/media/webrtc/tests/mochitests/test_getUserMedia_basicScreenshare.html
+++ b/dom/media/webrtc/tests/mochitests/test_getUserMedia_basicScreenshare.html
@@ -1200,6 +1200,17 @@ constraints
 "
 )
 ;
+SpecialPowers
+.
+wrap
+(
+document
+)
+.
+notifyUserGestureActivation
+(
+)
+;
 let
 stream
 =
@@ -1348,6 +1359,17 @@ and
 framerate
 constraints
 "
+)
+;
+SpecialPowers
+.
+wrap
+(
+document
+)
+.
+notifyUserGestureActivation
+(
 )
 ;
 stream
