--- a/dom/media/webrtc/tests/mochitests/test_getUserMedia_basicTabshare.html
+++ b/dom/media/webrtc/tests/mochitests/test_getUserMedia_basicTabshare.html
@@ -172,6 +172,19 @@ then
 )
 =
 >
+{
+SpecialPowers
+.
+wrap
+(
+document
+)
+.
+notifyUserGestureActivation
+(
+)
+;
+return
 getUserMedia
 (
 {
@@ -192,6 +205,8 @@ fake
 false
 }
 )
+;
+}
 )
 .
 then
