--- a/dom/media/webrtc/tests/mochitests/test_getUserMedia_basicWindowshare.html
+++ b/dom/media/webrtc/tests/mochitests/test_getUserMedia_basicWindowshare.html
@@ -108,6 +108,7 @@ HTMLMediaElement
 /
 runTest
 (
+async
 function
 (
 )
@@ -148,19 +149,63 @@ fake
 false
 }
 ;
-return
+try
+{
+await
 getUserMedia
 (
 constraints
 )
-.
-then
+;
+ok
 (
+false
+"
+Should
+require
+user
+gesture
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+is
+(
+e
+.
+name
+"
+InvalidStateError
+"
+)
+;
+}
+SpecialPowers
+.
+wrap
+(
+document
+)
+.
+notifyUserGestureActivation
+(
+)
+;
+const
 stream
 =
->
-{
-var
+await
+getUserMedia
+(
+constraints
+)
+;
+const
 playback
 =
 new
@@ -176,9 +221,6 @@ playback
 playMedia
 (
 false
-)
-;
-}
 )
 ;
 }
