--- a/dom/media/webrtc/tests/mochitests/test_getUserMedia_constraints.html
+++ b/dom/media/webrtc/tests/mochitests/test_getUserMedia_constraints.html
@@ -1126,12 +1126,27 @@ then
 )
 =
 >
+{
+SpecialPowers
+.
+wrap
+(
+document
+)
+.
+notifyUserGestureActivation
+(
+)
+;
+return
 getUserMedia
 (
 test
 .
 constraints
 )
+;
+}
 )
 .
 then
