--- a/docshell/test/chrome/bug293235_window.xhtml
+++ b/docshell/test/chrome/bug293235_window.xhtml
@@ -322,27 +322,11 @@ html
 let
 os
 =
-Cc
-[
-"
-mozilla
+SpecialPowers
 .
-org
-/
-observer
--
-service
-;
-1
-"
-]
+Services
 .
-getService
-(
-Ci
-.
-nsIObserverService
-)
+obs
 ;
 /
 /
