--- a/docshell/test/chrome/bug294258_window.xhtml
+++ b/docshell/test/chrome/bug294258_window.xhtml
@@ -325,27 +325,11 @@ true
 var
 file
 =
-Cc
-[
-"
-mozilla
+SpecialPowers
 .
-org
-/
-file
-/
-directory_service
-;
-1
-"
-]
+Services
 .
-getService
-(
-Ci
-.
-nsIProperties
-)
+dirsvc
 .
 get
 (
@@ -377,7 +361,7 @@ Ci
 nsIFile
 .
 NORMAL_FILE_TYPE
-0666
+0o666
 )
 ;
 let
