--- a/docshell/test/chrome/bug311007_window.xhtml
+++ b/docshell/test/chrome/bug311007_window.xhtml
@@ -355,57 +355,20 @@ prototype
 =
 {
 QueryInterface
-(
-aIID
-)
-{
-if
-(
-aIID
+:
+ChromeUtils
 .
-equals
+generateQI
 (
-Ci
-.
+[
+"
 nsIWebProgressListener
-)
-|
-|
-aIID
-.
-equals
-(
-Ci
-.
+"
+"
 nsISupportsWeakReference
-)
-|
-|
-aIID
-.
-equals
-(
-Ci
-.
-nsISupports
-)
-)
-return
-this
-;
-throw
-Components
-.
-Exception
-(
 "
-"
-Cr
-.
-NS_NOINTERFACE
+]
 )
-;
-}
 onLocationChange
 (
 aWebProgress
@@ -1791,10 +1754,9 @@ removeProgressListener
 gListener
 )
 ;
-delete
-(
 gListener
-)
+=
+null
 ;
 finish
 (
