--- a/docshell/test/chrome/bug396519_window.xhtml
+++ b/docshell/test/chrome/bug396519_window.xhtml
@@ -499,7 +499,7 @@ length
 {
 for
 (
-var
+let
 i
 =
 0
@@ -577,7 +577,7 @@ another
 .
 for
 (
-var
+let
 i
 =
 0
@@ -595,7 +595,7 @@ i
 {
 for
 (
-var
+let
 j
 =
 0
