--- a/docshell/test/chrome/bug582176_window.xhtml
+++ b/docshell/test/chrome/bug582176_window.xhtml
@@ -342,27 +342,11 @@ notificationCount
 let
 os
 =
-Cc
-[
-"
-mozilla
+SpecialPowers
 .
-org
-/
-observer
--
-service
-;
-1
-"
-]
+Services
 .
-getService
-(
-Ci
-.
-nsIObserverService
-)
+obs
 ;
 os
 .
