--- a/docshell/test/chrome/mozFrameType_window.xhtml
+++ b/docshell/test/chrome/mozFrameType_window.xhtml
@@ -312,29 +312,11 @@ function
 let
 ww
 =
-Cc
-[
-"
-mozilla
+SpecialPowers
 .
-org
-/
-embedcomp
-/
-window
--
-watcher
-;
-1
-"
-]
+Services
 .
-getService
-(
-Ci
-.
-nsIWindowWatcher
-)
+ww
 ;
 ww
 .
