--- a/docshell/test/chrome/test_bug453650.xhtml
+++ b/docshell/test/chrome/test_bug453650.xhtml
@@ -724,20 +724,9 @@ addEventListener
 load
 "
 function
-onLoad
 (
 )
 {
-iframe
-.
-removeEventListener
-(
-"
-load
-"
-onLoad
-)
-;
 SimpleTest
 .
 executeSoon
@@ -745,6 +734,11 @@ executeSoon
 nextTest
 )
 ;
+}
+{
+once
+:
+true
 }
 )
 ;
