--- a/docshell/test/chrome/test_bug565388.xhtml
+++ b/docshell/test/chrome/test_bug565388.xhtml
@@ -332,47 +332,20 @@ finish
 }
 }
 QueryInterface
-(
-iid
-)
-{
-if
-(
-iid
+:
+ChromeUtils
 .
-equals
+generateQI
 (
-Ci
-.
+[
+"
 nsIWebProgressListener
-)
-|
-|
-iid
-.
-equals
-(
-Ci
-.
+"
+"
 nsISupportsWeakReference
-)
-)
-return
-this
-;
-throw
-Components
-.
-Exception
-(
 "
-"
-Cr
-.
-NS_ERROR_NO_INTERFACE
+]
 )
-;
-}
 }
 var
 systemPrincipal
@@ -400,27 +373,11 @@ nsIPrincipal
 var
 webNav
 =
-Cc
-[
-"
-mozilla
+SpecialPowers
 .
-org
-/
-appshell
-/
-appShellService
-;
-1
-"
-]
+Services
 .
-getService
-(
-Ci
-.
-nsIAppShellService
-)
+appShell
 .
 createWindowlessBrowser
 (
