--- a/docshell/test/chrome/test_bug608669.xhtml
+++ b/docshell/test/chrome/test_bug608669.xhtml
@@ -366,27 +366,11 @@ notificationCount
 var
 os
 =
-Cc
-[
-"
-mozilla
+SpecialPowers
 .
-org
-/
-observer
--
-service
-;
-1
-"
-]
+Services
 .
-getService
-(
-Ci
-.
-nsIObserverService
-)
+obs
 ;
 os
 .
