--- a/docshell/test/chrome/test_bug789773.xhtml
+++ b/docshell/test/chrome/test_bug789773.xhtml
@@ -458,47 +458,20 @@ finishTest
 ;
 }
 QueryInterface
-(
-iid
-)
-{
-if
-(
-iid
+:
+ChromeUtils
 .
-equals
+generateQI
 (
-Ci
-.
-nsISupportsWeakReference
-)
-|
-|
-iid
-.
-equals
-(
-Ci
-.
+[
+"
 nsIWebProgressListener
-)
-)
-return
-this
-;
-throw
-Components
-.
-Exception
-(
 "
 "
-Cr
-.
-NS_ERROR_NO_INTERFACE
+nsISupportsWeakReference
+"
+]
 )
-;
-}
 }
 /
 /
