--- a/docshell/test/chrome/test_bug846906.xhtml
+++ b/docshell/test/chrome/test_bug846906.xhtml
@@ -198,27 +198,11 @@ waitForExplicitFinish
 var
 appShellService
 =
-Cc
-[
-"
-mozilla
+SpecialPowers
 .
-org
-/
-appshell
-/
-appShellService
-;
-1
-"
-]
+Services
 .
-getService
-(
-Ci
-.
-nsIAppShellService
-)
+appShell
 ;
 ok
 (
