--- a/docshell/test/chrome/test_docRedirect.xhtml
+++ b/docshell/test/chrome/test_docRedirect.xhtml
@@ -455,72 +455,29 @@ false
 ;
 }
 QueryInterface
-(
-iid
-)
-{
-if
-(
-iid
+:
+ChromeUtils
 .
-equals
+generateQI
 (
-Ci
-.
+[
+"
 nsIWebProgressListener
-)
-|
-|
-iid
-.
-equals
-(
-Ci
-.
+"
+"
 nsISupportsWeakReference
-)
-)
-return
-this
-;
-throw
-Components
-.
-Exception
-(
 "
-"
-Cr
-.
-NS_ERROR_NO_INTERFACE
+]
 )
-;
-}
 }
 var
 webNav
 =
-Cc
-[
-"
-mozilla
+SpecialPowers
 .
-org
-/
-appshell
-/
-appShellService
-;
-1
-"
-]
+Services
 .
-getService
-(
-Ci
-.
-nsIAppShellService
-)
+appShell
 .
 createWindowlessBrowser
 (
