Bug 1705289 use more restrictive variable declarations r=jib
No behavior changes.

Depends on D123559

Differential Revision: https://phabricator.services.mozilla.com/D123560

UltraBlame original commit: 865e8b4ab40ece5ea8b8c5bb0611c2c1a387596f

--- a/dom/media/webrtc/tests/mochitests/test_getUserMedia_basicWindowshare.html
+++ b/dom/media/webrtc/tests/mochitests/test_getUserMedia_basicWindowshare.html
@@ -113,7 +113,7 @@ function
 (
 )
 {
-var
+const
 testVideo
 =
 createMediaElement
@@ -126,7 +126,7 @@ testVideo
 '
 )
 ;
-var
+const
 constraints
 =
 {
