Bug 1727616 - Add meter ARIA role. r=Jamie
Differential Revision: https://phabricator.services.mozilla.com/D123674

UltraBlame original commit: f3b9fe71bc7d5a1e9c5b58dbf09cc887210cc6e7

--- a/accessible/tests/mochitest/role/test_aria.html
+++ b/accessible/tests/mochitest/role/test_aria.html
@@ -839,6 +839,22 @@ ROLE_RADIO_MENU_ITEM
 testRole
 (
 "
+aria_meter
+"
+ROLE_METER
+)
+;
+testRole
+(
+"
+aria_meter_mixed
+"
+ROLE_METER
+)
+;
+testRole
+(
+"
 aria_note
 "
 ROLE_NOTE
@@ -4783,6 +4799,40 @@ role
 =
 "
 mENUITEMRADIo
+"
+>
+<
+/
+span
+>
+<
+span
+id
+=
+"
+aria_meter
+"
+role
+=
+"
+meter
+"
+>
+<
+/
+span
+>
+<
+span
+id
+=
+"
+aria_meter_mixed
+"
+role
+=
+"
+meTer
 "
 >
 <
