Bug 1726272 - Remove SetupEMEPref from EME tests. r=alwu
The SetupEMEPref helper is no longer needed. This patch removes it from tests.
This patch does some minimal restyling and simplifying of the tests following
removal, but largely does not change them. There should be *no* logic changed in
the tests following the patch. They should run as before.

Differential Revision: https://phabricator.services.mozilla.com/D123630

UltraBlame original commit: cdcdbb5f98aab2b41b6eb3078a990cc75a193e5e

--- a/dom/media/test/test_eme_requestMediaKeySystemAccess_with_app_approval.html
+++ b/dom/media/test/test_eme_requestMediaKeySystemAccess_with_app_approval.html
@@ -1389,12 +1389,6 @@ accessPromises
 )
 ;
 }
-async
-function
-beginTest
-(
-)
-{
 /
 /
 The
@@ -1434,11 +1428,17 @@ of
 testCases
 )
 {
-await
+add_task
+(
+(
+)
+=
+>
 testSingleRequest
 (
 testCase
 )
+)
 ;
 }
 for
@@ -1449,11 +1449,17 @@ of
 testCases
 )
 {
-await
+add_task
+(
+(
+)
+=
+>
 testRequestWithInvalidArgs
 (
 testCase
 )
+)
 ;
 }
 for
@@ -1464,31 +1470,19 @@ of
 testCases
 )
 {
-await
+add_task
+(
+(
+)
+=
+>
 testMultipleRequests
 (
 testCase
 )
-;
-}
-SimpleTest
-.
-finish
-(
 )
 ;
 }
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-SetupEMEPref
-(
-beginTest
-)
-;
 <
 /
 script
