Bug 1726265 - Prototype webgl draft ext OES_draw_buffers_indexed. r=lsalzman,emilio,webidl
Differential Revision: https://phabricator.services.mozilla.com/D122916

UltraBlame original commit: 2e0d7aa9f89849b32c22453bbfbadfa06910ce5b

--- a/dom/canvas/test/webgl-conf/checkout/conformance2/extensions/oes-draw-buffers-indexed.html
+++ b/dom/canvas/test/webgl-conf/checkout/conformance2/extensions/oes-draw-buffers-indexed.html
@@ -3636,14 +3636,23 @@ drawBuffers
 DRAW_BUFFERS
 )
 ;
-console
+gl
 .
-log
+colorMask
 (
-'
-DRAW_BUFFERS
-'
-DRAW_BUFFERS
+1
+1
+1
+1
+)
+;
+gl
+.
+disable
+(
+gl
+.
+BLEND
 )
 ;
 gl
@@ -3702,10 +3711,12 @@ gl
 0
 0
 ]
-'
+COLOR_ATTACHMENT
+{
+i
+}
 initially
 black
-'
 )
 ;
 }
