Bug 1727533 - Fix some ::slotted() parsing tests. r=boris
We're currently "failing" these, but I think our behavior is correct.

:is() and :where() are valid because they have this different error
recovery where invalid selectors inside it get discarded.

Differential Revision: https://phabricator.services.mozilla.com/D123620

UltraBlame original commit: 2659dc4dbb3e8041ba1fa2bc53d1d8a66ae43584

--- a/testing/web-platform/tests/css/css-scoping/slotted-parsing.html
+++ b/testing/web-platform/tests/css/css-scoping/slotted-parsing.html
@@ -272,78 +272,6 @@ slotted
 *
 )
 :
-is
-(
-:
-hover
-)
-"
-)
-;
-test_invalid_selector
-(
-"
-:
-:
-slotted
-(
-*
-)
-:
-where
-(
-:
-hover
-)
-"
-)
-;
-test_invalid_selector
-(
-"
-:
-:
-slotted
-(
-*
-)
-:
-is
-(
-#
-id
-)
-"
-)
-;
-test_invalid_selector
-(
-"
-:
-:
-slotted
-(
-*
-)
-:
-where
-(
-#
-id
-)
-"
-)
-;
-test_invalid_selector
-(
-"
-:
-:
-slotted
-(
-*
-)
-:
 read
 -
 only
@@ -455,6 +383,158 @@ not
 .
 a
 )
+)
+"
+)
+;
+test_valid_selector
+(
+"
+:
+:
+slotted
+(
+*
+)
+:
+is
+(
+)
+"
+)
+;
+test_valid_selector
+(
+"
+:
+:
+slotted
+(
+*
+)
+:
+is
+(
+:
+hover
+)
+"
+"
+:
+:
+slotted
+(
+*
+)
+:
+is
+(
+)
+"
+)
+;
+test_valid_selector
+(
+"
+:
+:
+slotted
+(
+*
+)
+:
+is
+(
+#
+id
+)
+"
+"
+:
+:
+slotted
+(
+*
+)
+:
+is
+(
+)
+"
+)
+;
+test_valid_selector
+(
+"
+:
+:
+slotted
+(
+*
+)
+:
+where
+(
+)
+"
+)
+;
+test_valid_selector
+(
+"
+:
+:
+slotted
+(
+*
+)
+:
+where
+(
+:
+hover
+)
+"
+"
+:
+:
+slotted
+(
+*
+)
+:
+where
+(
+)
+"
+)
+;
+test_valid_selector
+(
+"
+:
+:
+slotted
+(
+*
+)
+:
+where
+(
+#
+id
+)
+"
+"
+:
+:
+slotted
+(
+*
+)
+:
+where
+(
 )
 "
 )
