Bug 1670129 - InputContext has to synchronize with current inputmode or enterkeyhint if this value is updated. r=masayuki
Blink and WebKit support dynamically change of `inputmode`.  When the focused
element's `inputmode` value is changed, software keyboard layout will be
changed by new value.

Actually, Gecko references it when getting focus only now.  So we should apply
dynamically change like other browsers.

Also, `enterkeyhint` has same issue.  Current WebKit is same behaviour as
Gecko, but Blink is same as `inputmode` behaviour.  So I would like to change
this like `inputmode`.

And since WebKit and Blink doesn't commit composition when changing this value,
So we also add "Don't commit composition" flags for it. It depends on IME.

Differential Revision: https://phabricator.services.mozilla.com/D122490

UltraBlame original commit: 3519ff8b4fb4f9d798b769d8376afb7c2b57f2f7

--- a/dom/html/test/test_inputmode.html
+++ b/dom/html/test/test_inputmode.html
@@ -666,20 +666,52 @@ javascript
 >
 SimpleTest
 .
-waitForExplicitFinish
+registerCleanupFunction
 (
-)
-;
-SimpleTest
-.
-waitForFocus
-(
-async
 (
 )
 =
 >
 {
+SpecialPowers
+.
+clearUserPref
+(
+"
+dom
+.
+forms
+.
+inputmode
+"
+)
+;
+}
+)
+;
+add_task
+(
+async
+function
+setup
+(
+)
+{
+await
+new
+Promise
+(
+r
+=
+>
+SimpleTest
+.
+waitForFocus
+(
+r
+)
+)
+;
 await
 SpecialPowers
 .
@@ -695,6 +727,17 @@ inputmode
 true
 )
 ;
+}
+)
+;
+add_task
+(
+async
+function
+basic
+(
+)
+{
 const
 tests
 =
@@ -1429,24 +1472,216 @@ desc
 )
 ;
 }
+}
+)
+;
+add_task
+(
+async
+function
+dynamicChange
+(
+)
+{
+const
+tests
+=
+[
+"
+a3
+"
+"
+b3
+"
+"
+c3
+"
+]
+;
+for
+(
+let
+test
+of
+tests
+)
+{
+let
+element
+=
+document
+.
+getElementById
+(
+test
+)
+;
+element
+.
+focus
+(
+)
+;
+is
+(
 SpecialPowers
 .
-clearUserPref
-(
+DOMWindowUtils
+.
+focusedInputMode
 "
-dom
-.
-forms
-.
+tel
+"
+"
+Initial
 inputmode
 "
 )
 ;
-SimpleTest
+element
 .
-finish
+inputMode
+=
+"
+url
+"
+;
+is
+(
+SpecialPowers
+.
+DOMWindowUtils
+.
+focusedInputMode
+"
+url
+"
+"
+inputmode
+in
+InputContext
+has
+to
+sync
+with
+current
+inputmode
+"
+)
+;
+/
+/
+Storing
+the
+original
+value
+may
+be
+safer
+.
+element
+.
+inputMode
+=
+"
+tel
+"
+;
+}
+let
+element
+=
+document
+.
+getElementById
+(
+"
+a3
+"
+)
+;
+element
+.
+focus
 (
 )
+;
+is
+(
+SpecialPowers
+.
+DOMWindowUtils
+.
+focusedInputMode
+"
+tel
+"
+"
+Initial
+inputmode
+"
+)
+;
+document
+.
+getElementById
+(
+"
+a4
+"
+)
+.
+inputMode
+=
+"
+email
+"
+;
+is
+(
+SpecialPowers
+.
+DOMWindowUtils
+.
+focusedInputMode
+"
+tel
+"
+"
+inputmode
+in
+InputContext
+keeps
+focused
+inputmode
+value
+"
+)
+;
+/
+/
+Storing
+the
+original
+value
+may
+be
+safer
+.
+document
+.
+getElementById
+(
+"
+a4
+"
+)
+.
+inputMode
+=
+"
+url
+"
 ;
 }
 )
