--- a/widget/tests/test_actionhint.html
+++ b/widget/tests/test_actionhint.html
@@ -661,19 +661,77 @@ javascript
 >
 SimpleTest
 .
-waitForExplicitFinish
+registerCleanupFunction
 (
-)
-;
-SimpleTest
-.
-waitForFocus
-(
-async
 (
 )
 =
 >
+{
+SpecialPowers
+.
+clearUserPref
+(
+"
+dom
+.
+forms
+.
+enterkeyhint
+"
+)
+;
+}
+)
+;
+add_task
+(
+async
+function
+setup
+(
+)
+{
+await
+new
+Promise
+(
+r
+=
+>
+SimpleTest
+.
+waitForFocus
+(
+r
+)
+)
+;
+await
+SpecialPowers
+.
+setBoolPref
+(
+"
+dom
+.
+forms
+.
+enterkeyhint
+"
+true
+)
+;
+}
+)
+;
+add_task
+(
+async
+function
+basic
+(
+)
 {
 const
 tests
@@ -1097,21 +1155,6 @@ link
 }
 ]
 ;
-await
-SpecialPowers
-.
-setBoolPref
-(
-"
-dom
-.
-forms
-.
-enterkeyhint
-"
-true
-)
-;
 for
 (
 let
@@ -1186,24 +1229,150 @@ desc
 )
 ;
 }
-SpecialPowers
+}
+)
+;
+add_task
+(
+async
+function
+dynamicChange
+(
+)
+{
+let
+element
+=
+document
 .
-clearUserPref
+getElementById
 (
 "
-dom
-.
-forms
-.
-enterkeyhint
+l1
 "
 )
 ;
-SimpleTest
+element
 .
-finish
+focus
 (
 )
+;
+is
+(
+SpecialPowers
+.
+DOMWindowUtils
+.
+focusedActionHint
+"
+enter
+"
+"
+Initial
+enterKeyHint
+"
+)
+;
+element
+.
+enterKeyHint
+=
+"
+search
+"
+;
+is
+(
+SpecialPowers
+.
+DOMWindowUtils
+.
+focusedActionHint
+"
+search
+"
+"
+enterKeyHint
+in
+InputContext
+has
+to
+sync
+with
+current
+enterKeyHint
+"
+)
+;
+document
+.
+getElementById
+(
+"
+l2
+"
+)
+.
+enterKeyHint
+=
+"
+send
+"
+;
+is
+(
+SpecialPowers
+.
+DOMWindowUtils
+.
+focusedActionHint
+"
+search
+"
+"
+enterKeyHint
+in
+InputContext
+keeps
+focused
+enterKeyHint
+value
+"
+)
+;
+/
+/
+Storing
+the
+original
+value
+may
+be
+safer
+.
+element
+.
+enterkeyhint
+=
+"
+enter
+"
+;
+document
+.
+getElementById
+(
+"
+l2
+"
+)
+.
+enterKeyHint
+=
+"
+done
+"
 ;
 }
 )
